--- a/education.html
+++ b/education.html
@@ -62,7 +62,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small devices -->
@@ -87,7 +87,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -159,7 +159,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -208,7 +208,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -231,7 +231,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -256,7 +256,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert - "Unity Mini-Projects - C# Fundamentals"s -->
@@ -282,7 +282,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -305,7 +305,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -332,7 +332,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -358,7 +358,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -386,7 +386,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -412,7 +412,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -437,7 +437,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -465,7 +465,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -496,7 +496,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -526,7 +526,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -556,7 +556,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -583,7 +583,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
@@ -610,7 +610,7 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
       </div>
   
       <!-- Hide this text on small device - Cert Name here -->
