--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <!-- First Parallax Image with Logo Text -->
   <div class="bgimg-1 w3-display-container w3-opacity-min">
     <div class="w3-display-middle" style="white-space:nowrap;">
-      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">ABOUT <span class="w3-hide-small">US</span>.</span>
+      <span class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-animate-opacity">ABOUT<span class="w3-hide-small"></span>.</span>
     </div>
   </div>
   
