--- a/education.html
+++ b/education.html
@@ -636,15 +636,21 @@
          
 
 
-    <p class="w3-large w3-center w3-padding-16">Some Example Projects</p>
+    <p class="w3-large w3-center w3-padding-16">Some Project Examples</p>
     <div class="animImgDiv">
-      <!-- <img src="images\VR_Driving.png" alt="the back of random person" style="--f:.12;--r:100%" class="imgAnim"> -->
-      <!-- <img src="images\fishTank1.png" alt="an eagle" style="--f:.12;--r:100%" class="imgAnim">
-      <img src="images\xrTerra2.png" alt="a cup of something to drink, probably some tea" style="--f:.08;--r:100%" class="imgAnim"> -->
-      <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:3%" class="imgAnim"></a>
-      <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:3%" class="imgAnim"></a>
-      <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:3%" class="imgAnim"></a>
+      <div class="flex-container">
+        <div>
+          <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+        </div>
+        <div>
+          <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
+        </div>
+        <div>
+          <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
+        </div>  
+      </div>
     </div>
+  </div>
   </div>
   
 
@@ -654,10 +660,10 @@
   <footer class="w3-center w3-black w3-padding-64">
     <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
     <div class="w3-xlarge w3-section">
-      <a class="w3-hover-opacity" href="https://bloghoskins.blogspot.com/"> <img src="images/bloggerIcon.png" width="20.58" height="24"></a>
-      <a class="w3-hover-opacity" href="https://github.com/gary909"> <img src="images/github-mark-white.svg" width="23" height="23"></a>
-      <a class="w3-hover-opacity" href="https://www.codewars.com/users/gary909"> <img src="images/codewars_icon.png" width="23" height="23"></a>
-      <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/gary-white-3a779a51/"></a>
+      <a class="w3-hover-opacity" href="https://bloghoskins.blogspot.com/"> <img src="images/bloggerIcon.png" width="20.58" height="24" alt="blogspot icon" title="Link to Blog"></a>
+      <a class="w3-hover-opacity" href="https://github.com/gary909"> <img src="images/github-mark-white.svg" width="23" height="23" alt="blogspot icon" title="Link to GitHub"></a>
+      <a class="w3-hover-opacity" href="https://www.codewars.com/users/gary909"> <img src="images/codewars_icon.png" width="23" height="23" alt="Codewars icon" title="Link to Codewars"></a>
+      <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/gary-white-3a779a51/" alt="LinkedIn icon" title="LinkedIn Link"></a>
 
     </div>
   </footer>
