--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     <!-- BLOG Section -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <a href="https://bloghoskins.blogspot.com/" target=”_blank”><img src="images/bloggerIcon_blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" ></a>
+        <a href="https://bloghoskins.blogspot.com/" target=”_blank”><img src="images/bloggerIcon_blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" alt="Blogger Icon" title="Link to Blog"></a>
       </div>
       <!-- DO NOT Hide this text on small devices -->
       <div class="w3-col m6 w3-padding-large">
@@ -87,7 +87,7 @@
     <!-- GitHub Section -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <a href="https://github.com/gary909" target=”_blank”><img src="images/github-mark-blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" ></a>
+        <a href="https://github.com/gary909" target=”_blank”><img src="images/github-mark-blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" alt="Github Icon" title="Link to GitHub"></a>
       </div>
       <!-- DO NOT Hide this text on small devices -->
       <div class="w3-col m6 w3-padding-large">
@@ -99,7 +99,7 @@
     <!-- LinkedIn Section -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <a href="https://www.linkedin.com/in/gary-white-3a779a51/" target=”_blank”><img src="images/LI-In-Blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" ></a>
+        <a href="https://www.linkedin.com/in/gary-white-3a779a51/" target=”_blank”><img src="images/LI-In-Blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" alt="LinkedIn Icon" title="LinkedIn Link"></a>
       </div>
       <!-- DO NOT Hide this text on small devices -->
       <div class="w3-col m6 w3-padding-large">
@@ -112,7 +112,7 @@
     <!-- CodeWars Section -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
-        <a href="https://www.codewars.com/users/gary909" target=”_blank”><img src="images/codewars_icon_blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" ></a>
+        <a href="https://www.codewars.com/users/gary909" target=”_blank”><img src="images/codewars_icon_blue.png" style="--f:.12;--r:1%" class="imgAnimSmall" alt="Codewars Icon" title="Link to Codewars"></a>
       </div>
       <!-- DO NOT Hide this text on small devices -->
       <div class="w3-col m6 w3-padding-large">
