--- a/education.html
+++ b/education.html
@@ -62,11 +62,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/AR_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Augmented Reality 101" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small devices -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Augmented Reality 101</h5>
         <h6>June 2023</h6>
         <ul>
@@ -84,14 +84,14 @@
     <br>
 
     <!-- Cert --- Intro to Particle Systems for Games -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/partCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Intro to Particle Systems for Games" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!--DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Intro to Particle Systems for Games</h5>
         <h6>June 2023</h6>
           <ul>
@@ -110,11 +110,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/XR_Terra_Cert.png" class="w3-round w3-image" alt="Photo of Me" title="XR Terra Cert" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>XR Foundations Developer</h5>
         <h6>March 2023</h6>
@@ -132,14 +132,14 @@
 
 
     <!-- Cert - Discover the XR Interaction Toolkit for VR -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/XR_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Discover the XR Interaction Toolkit for VR" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices - Discover the XR Interaction Toolkit for VR -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small devices - Discover the XR Interaction Toolkit for VR -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Discover the XR Interaction Toolkit for VR</h5>
         <h6>February 2023</h6>
         <ul>
@@ -159,11 +159,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/CompWebDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - The complete 2023 Web Dev Bootcamp" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>The Complete 2023 Web Dev Bootcamp</h5>
         <h6>January 2023</h6>
@@ -181,14 +181,14 @@
 
 
     <!-- Cert - Create Your First 3D Game in Unity -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="images/3dSpiel_Cert_GW.png" class="w3-round w3-image" alt="Photo of Me" title="Cert - Create Your First 3D Game in Unity" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices - Cert - Create Your First 3D Game in Unity  -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small devices - Cert - Create Your First 3D Game in Unity  -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Create Your First 3D Game in Unity</h5>
         <h6>January 2023</h6>
         <ul>
@@ -208,11 +208,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/MobDevCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Mobile Game Development for Beginners" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Mobile Game Development for Beginners</h5>
         <h6>January 2023</h6>
         <ul>
@@ -228,14 +228,14 @@
 
 
     <!-- Cert --- Learn the Entire Affinity Suite -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/AffinityCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Learn the Entire Affinity Suite" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Learn the Entire Affinity Suite: Photo, Designer & Publisher</h5>
         <h6>January 2023</h6>
@@ -252,15 +252,15 @@
 
 
 
-    <!-- Cert - "Unity Mini-Projects - C# Fundamentals"s -->
+    <!-- Cert - Unity Mini-Projects - C# Fundamentals -->
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/C_Sharp_Cert_GW.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Unity Mini-Projects - C# Fundamentals" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert - "Unity Mini-Projects - C# Fundamentals"s -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert - "Unity Mini-Projects - C# Fundamentals"s -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Unity Mini-Projects - C# Fundamentals</h5>
         <h6>January 2023</h6>
         <ul>
@@ -279,14 +279,14 @@
 
 
     <!-- Cert --- Data Privacy Training Basic  -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/dataCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Data Privacy Training Basic" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Data Privacy Training Basic</h5>
         <h6>Sept 2022</h6>
@@ -305,11 +305,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images\GameOfLifeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Build The Game Of Life"  width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Build The Game Of Life</h5>
         <h6>August 2021</h6>
         <ul>
@@ -329,14 +329,14 @@
     
 
     <!-- Cert --- Complete SEO Training 2021 -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/SEO21Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Complete SEO Training 2021" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Complete SEO Training 2021</h5>
         <h6>July 2021</h6>
@@ -358,11 +358,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/MusicBoxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Generative Music Box" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Generative Music Box Project</h5>
         <h6>June 2021</h6>
@@ -383,14 +383,14 @@
 
 
     <!-- Cert --- Building Your First VR Experience With Unity -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/VRexpCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Building Your First VR Experience With Unity" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Building Your First VR Experience With Unity</h5>
         <h6>May 2021</h6>
@@ -412,11 +412,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/xddc_Cert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - XD/DC UI/UX Course" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>XD/DC – Adobe XD Workshop Tour</h5>
         <h6>Sept 2019</h6>
@@ -434,14 +434,14 @@
 
     
     <!-- Cert --- SEO Training -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/seoTrainCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - SEO Training" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>SEO Training</h5>
         <h6>August 2019</h6>
@@ -465,11 +465,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/irnHckCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - 9-Week Web Development Bootcamp" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>Ironhack 9-Week Web Development Bootcamp</h5>
         <h6>May 2019</h6>
         <ul>
@@ -493,14 +493,14 @@
 
 
     <!-- Cert --- Angular Back To Front -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/AngCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Angular Back To Front" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Angular Front To Back</h5>
         <h6>August 2019</h6>
@@ -526,11 +526,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/uiUxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - UI UX Design Thinking" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>UX, UI and Design Thinking</h5>
         <h6>July 2019</h6>
@@ -553,14 +553,14 @@
 
 
     <!-- Cert --- Android Basics Nanodegree by Google -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/AndroidCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - Android Basics Nanodegree by Google" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>Android Basics Nanodegree by Google</h5>
         <h6>July 2017</h6>
@@ -583,11 +583,11 @@
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/AlgeCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - AlgebraX: Introduction to Algebra" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <h5>AlgebraX: Introduction to Algebra</h5>
         <h6>March 2016</h6>
         <ul>
@@ -607,14 +607,14 @@
 
 
     <!-- Cert --- EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds -->
-    <div class="w3-row">
+    <div class="w3-row dividerColGrey">
       <div class="w3-col m6 w3-center w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" width="500" height="333">
+        <img src="images/ee40lxCert.png" class="w3-round w3-image" alt="Photo of Certificate" title="Cert - EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small device - Cert Name here -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- DO NOT Hide this text on small device - Cert Name here -->
+      <div class="w3-col m6 w3-padding-large">
         <br>
         <h5>EE40LX: Electronic Interfaces: Bridging the Physical and Digital Worlds</h5>
         <h6>November 2015</h6>
