--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
       <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
         <i class="fa fa-bars"></i>
       </a>
-      <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-      <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-      <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="index.html" class="w3-bar-item w3-button NaVFontCol">HOME</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> PORTFOLIO</a>
+      <a href="about.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"> ABOUT</a>
+      <a href="contact.html" class="w3-bar-item w3-button w3-hide-small NaVFontCol"></i> CONTACT</a>
       <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
         <!-- <i class="fa fa-search"></i> -->
       </a>
@@ -30,9 +30,9 @@
   
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-      <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-      <a href="portfolio.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-      <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+      <a href="portfolio.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">PORTFOLIO</a>
+      <a href="about.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">ABOUT</a>
+      <a href="contact.html" class="w3-bar-item w3-button NaVFontCol" onclick="toggleFunction()">CONTACT</a>
       
     </div>
   </div>
