--- a/education.html
+++ b/education.html
@@ -47,16 +47,15 @@
     </div>
   </div>
 
-
-  
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-    <h3 class="w3-center">Certificates & Qualifications</h3>
-    <!-- <p class="w3-center"><em>We Love VR</em></p> -->
-    <!-- <p>Here is a list of some of my Certificates & Qualifications:</p> -->
-
-
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Certificates & Qualifications</h3>
+    <p>Listed below are some recently completed courses...</p>
     <br>
+
+
+
+
 
     <!-- Cert - Augmented Reality 101 -->
     <div class="w3-row">
