--- a/about.html
+++ b/about.html
@@ -50,8 +50,13 @@
   </div>
   
   <!-- Container (About Section) -->
-  <div class="w3-content w3-container w3-padding-64" id="about">
-    <h3 class="w3-center">ABOUT ME</h3>
+
+
+  <!-- Container (About Section) -->
+  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Learn More Here</h3>
+    <p></p>
+    <br>  
     
     <!-- <p>By day a web developer, but at night I put on my glasses and become a VR Developer!  Purely a passion project, Digital Sunset Studios is the name I work under for my VR projects.
       In 2016 I first started playing around with Google Cardboard and Unity and since then have progressed into making experiences for the Occulus Quest and Rift.
@@ -118,14 +123,18 @@
       <div class="w3-col m6 w3-padding-large">
         <a href="https://www.codewars.com/users/gary909" target=”_blank” ><h5>Codewars</h5></a>
         <p>Katas are simple programming challenges designed to improve your problem solving skills.  View my Katas here or stop by and make friends...</p>
-        <a target="_blank" href="https://www.codewars.com/users/gary909/badges/micro"><img src="https://www.codewars.com/users/gary909/badges/large" alt="codewars badge large" /></a>
+        <a target="_blank" href="https://www.codewars.com/users/gary909"><img src="https://www.codewars.com/users/gary909/badges/small" alt="codewars badge" title="Codewars" /></a>
       </div>
     </div>
-    <br>
-    
+  </div> 
 
 
-      <p class="w3-large w3-center w3-padding-16">Some Project Examples</p>
+  <!-- Container (Example Projects) -->
+  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Some Example Projects</h3>
+    <p></p>
+    <br>  
+    <br> 
       <div class="animImgDiv">
         <div class="flex-container">
           <div>
