--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
       </div>
     </div>
 
-
-  
-  <!-- Container (About Section) -->
+  <!-- Container (About US) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-    <h3 class="w3-center">ABOUT US</h3>
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">ABOUT US</h3>
     <p class="w3-center"><em>We Love VR</em></p>
     <p>Welcome to the future of virtual reality! At Digital Sunset Studios, we are a cutting-edge VR software company dedicated to revolutionizing the way people experience immersive digital 
       environments. By leveraging the latest advancements in technology, we bring virtual worlds to life, empowering individuals and businesses to explore limitless possibilities in a virtual realm.</p>
@@ -85,31 +83,36 @@
         <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Logo" title="Logo" width="500" height="333">
       </div>
   
-      <!-- Hide this text on small devices -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
+      <!-- Do NOT Hide this text on small devices -->
+      <div class="w3-col m6 w3-padding-large">
         <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
           Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
         <p>Join us on this thrilling journey into the immersive realm of virtual reality. Together, let's shape the future and redefine what it means to be truly present in a digital world.</p>
       </div>
     </div>
-    <p class="w3-large w3-center w3-padding-16">Some Project Examples</p>
-    <div class="animImgDiv">
-      <div class="flex-container">
-        <div>
-          <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+
+    <!-- Container (Example Projects) -->
+    <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+      <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">EXAMPLE PROJECTS</h3>
+      <p></p>
+      <br>  
+      <br> 
+        <div class="animImgDiv">
+          <div class="flex-container">
+            <div>
+              <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+            </div>
+            <div>
+              <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
+            </div>
+            <div>
+              <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
+            </div>  
+          </div>
         </div>
-        <div>
-          <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
-        </div>
-        <div>
-          <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
-        </div>  
       </div>
     </div>
-  </div>
-  
 
-  
   
   <!-- Footer -->
   <footer class="w3-center w3-black w3-padding-64">
