--- a/education.html
+++ b/education.html
@@ -635,23 +635,28 @@
          
 
 
-    <p class="w3-large w3-center w3-padding-16">Some Project Examples</p>
-    <div class="animImgDiv">
-      <div class="flex-container">
-        <div>
-          <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+    <!-- Container (Example Projects) -->
+    <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+      <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">EXAMPLE PROJECTS</h3>
+      <p></p>
+      <br>  
+      <br> 
+        <div class="animImgDiv">
+          <div class="flex-container">
+            <div>
+              <a href="portfolio.html"><img src="images\VR_Driving.png" style="--f:.12;--r:1%" class="imgAnim" alt="VR Driving" title="VR driving project"></a>
+            </div>
+            <div>
+              <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
+            </div>
+            <div>
+              <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
+            </div>  
+          </div>
         </div>
-        <div>
-          <a href="portfolio.html"><img src="images\fishTank1.png" style="--f:.12;--r:1%" class="imgAnim" alt="aquarium VR" title="Aquarium project"></a>
-        </div>
-        <div>
-          <a href="portfolio.html"><img src="images\xrTerra2.png" style="--f:.12;--r:1%" class="imgAnim" alt="XR Terra coursework" title="XR Terra coursework"></a>
-        </div>  
       </div>
     </div>
-  </div>
-  </div>
-  
+  </div> 
 
   
   
