--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,30 @@
           </div>
 
       </div>
+    </div>
 
+
+      <!-- Container (AR Course) -->
+  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Augmented Reality</h3>
+    <p class="w3-center"><em>Interacting with the real world</em></p>
+    <div class="w3-row">
+      <div class="w3-col m6 w3-center w3-padding-large">
+        <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
+        <video width="400" poster="images/AR_Car.gif"  alt="Augmented Reality Car on Table" title="Augmented Reality">
+        Your browser does not support the video tag.
+        </video>
+        <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
+      </div>
+    
+        <!-- Hide this text on small devices -->
+        <div class="w3-col m6 w3-hide-small w3-padding-large">
+          <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
+            Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
+        </div>
+      </div>
+    </div>
+  </div>
       
   <!-- Container (Synth Design Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
