--- a/contact.html
+++ b/contact.html
@@ -59,24 +59,14 @@
       </div>
       <div class="w3-col m8 w3-panel">
         <div class="w3-large w3-margin-bottom">
-          <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Leipzig, DE<br>
+          <br>
+          <a class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right" href="https://www.google.com/maps/d/viewer?mid=1dabdB_6NhPt85_7Lol59WHtYQFM&ie=UTF8&hl=en&msa=0&ll=51.33972800000001%2C12.363396000000009&spn=0.025737%2C0.054932&z=14&source=embed" target="_blank"></a><a href="https://www.linkedin.com/in/gary-white-3a779a51/" target="_blank"></a><a href="https://www.google.com/maps/d/viewer?mid=1dabdB_6NhPt85_7Lol59WHtYQFM&ie=UTF8&hl=en&msa=0&ll=51.33972800000001%2C12.363396000000009&spn=0.025737%2C0.054932&z=14&source=embed" target="_blank" title="Opens Google Maps">Location:  Leipzig, DE</a>
           <!-- <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br> -->
-          <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: Coming soon<br>
+          <br>
+          <br>
+          <br>
+          <a class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right" href="https://www.linkedin.com/in/gary-white-3a779a51/" target="_blank"></a><a href="https://www.linkedin.com/in/gary-white-3a779a51/" target="_blank" title="Opens LinkedIn Page">Email: Contact Me Via LinkedIn</a>
         </div>
-        <!-- <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p> -->
-        <!-- <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-right w3-section" type="submit">
-            <i class="fa fa-paper-plane"></i> SEND MESSAGE
-          </button> -->
         </form>
       </div>
     </div>
