--- a/education.html
+++ b/education.html
@@ -47,9 +47,20 @@
     </div>
   </div>
 
+
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Certificates & Qualifications</h3>
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">OVERVIEW</h3>
+    <p>Listed below are some recently completed courses...</p>
+    <br>
+  </div>
+
+
+
+
+  <!-- Container (About Section) -->
+  <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">CERTIFICATES & QUALIFICATIONS</h3>
     <p>Listed below are some recently completed courses...</p>
     <br>
 
