--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
     <p>Welcome to the future of virtual reality! At Digital Sunset Studios, we are a cutting-edge VR software company dedicated to revolutionizing the way people experience immersive digital 
       environments. By leveraging the latest advancements in technology, we bring virtual worlds to life, empowering individuals and businesses to explore limitless possibilities in a virtual realm.</p>
     <div class="w3-row">
-      <div class="w3-col m6 w3-center w3-padding-large">
+      <div class="w3-col m6 w3-padding-large">
         <!-- <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br> -->
-        <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Logo" title="Logo" width="500" height="333">
+        <!-- <img src="images/DigitalSunsetLogo.png" class="w3-round w3-image" alt="Logo" title="Logo" width="500" height="333"> -->
+        <video width="450" poster="images/VR_Comp.gif" alt="Digital Sunset Compilation video" title="Digital Sunset Compilation video">
+        </video>
       </div>
   
       <!-- Do NOT Hide this text on small devices -->
