--- a/portfolio.html
+++ b/portfolio.html
@@ -192,10 +192,12 @@
         <!-- <img src="images/fishTank1.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333"> -->
       </div>
     
-        <!-- Hide this text on small devices -->
-        <div class="w3-col m6 w3-hide-small w3-padding-large">
-          <p>At Digital Sunset Studios, we are not just building software; we are crafting experiences. We believe that virtual reality has the power to inspire, engage, and empower individuals and communities. 
-            Our mission is to unlock the full potential of virtual reality, fostering a new era of digital exploration and transforming the way we perceive and interact with our world.</p>
+        <!-- DO NOT Hide this text on small devices -->
+        <div class="w3-col m6 w3-padding-large">
+          <p>XR Terra is an online training platform who offer live classroom training in VR.  I took part in their VR Developer Foundations 4 week course, and this was the result. </p>
+          <p>Using Unity, C# and VR toolkits and libraries we created a scene with VR interactions and locomotion, also utilising Animations, character controllers and movement.</p>
+          <p>In the video here (please click to play), you can see the interactable control panel which is also grabable, this triggers an animation that leads to the creation of an object. 
+            This object can then be assigned a material and then using another button, destroyed with particle effects.  Another level controls the poistion of the sun, changing the scenes lighting.  You can also pick up an eat half an apple.</p>
         </div>
       </div>
 
