--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
   <!-- Container (About Section) -->
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
-    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">Learn More Here</h3>
+    <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">LEARN MORE HERE</h3>
     <p></p>
     <br>  
     
@@ -70,7 +70,8 @@
       <!-- Do Not Hide this text on small devices -->
       <div class="w3-col m6  w3-padding-large">
         <p>By day a web developer, but at night I put on my glasses and become a VR Developer!  Purely a passion project, Digital Sunset Studios is the name I work under for my VR projects.
-          In 2016 I first started playing around with Google Cardboard and Unity and since then have progressed into making experiences for the Occulus Quest and Rift.</p>
+          In 2016 I first started playing around with Google Cardboard and Unity. Since then I've progressed into making experiences for the Occulus Quest and Rift.</p>
+          <p>Originally I studied Sound Engineering and Electronic Engineering, but have always been facinated with programming so in 2019 I took part in the 9 week Web Development course at Ironhack Berlin.</p>
       </div>
     </div>
     <br>
@@ -97,7 +98,7 @@
       <!-- DO NOT Hide this text on small devices -->
       <div class="w3-col m6 w3-padding-large">
         <a href="https://github.com/gary909" target=”_blank”><h5>GitHub</h5></a>
-        <p>GitHub is a code hosting platform for version control and collaboration.</p>
+        <p>GitHub is a code hosting platform for version control and collaboration. View my code here.</p>
       </div>
     </div>
     <br>
