--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
   <div class="w3-content w3-container w3-padding-64 DssBG" id="about">
     <h3 class="w3-center w3-padding-large w3-blue w3-xlarge w3-wide w3-opacity-min">GET IN TOUCH</h3>
     <br>
-    <p class="w3-center"><em>I'd love your feedback!</em></p>
+    <!-- <p class="w3-center"><em>I'd love your feedback!</em></p>-->
   
     <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-col m4 w3-container">
